@@ -67,3 +67,9 @@ TARGET_LINK_LIBRARIES(demo3 pycasso)
 
 ADD_EXECUTABLE(demo4 demos/demo4.cpp)
 TARGET_LINK_LIBRARIES(demo4 pycasso)
+
+ADD_EXECUTABLE(demo5 demos/demo5.cpp)
+TARGET_LINK_LIBRARIES(demo5 pycasso)
+
+ADD_EXECUTABLE(demo6 demos/demo6.cpp)
+TARGET_LINK_LIBRARIES(demo6 pycasso)
