@@ -27,33 +27,41 @@ public:
     Layer2D();
     virtual ~Layer2D();
 
+    virtual void setRotation(float x, float y, float angle)=0;
+    virtual void clearRotation()=0;
+
     virtual void drawPoint(float x, float y)=0;
+
     virtual void drawLine(float x1, float y1, float x2, float y2)=0;
+
     virtual void drawTriangle(float x1,
                     float y1,
                     float x2,
                     float y2,
                     float x3,
                     float y3)=0;
+
     virtual void drawSquare(float x,
                     float y,
-                    float rad,
-                    float rot=0.0f)=0;
+                    float side)=0;
+
     virtual void drawCircle(float x,
                     float y,
                     float rad,
                     float beginAngle=0.0f,
                     float endAngle=(M_PI * 2))=0;
+
     virtual void fillTriangle(float x1,
                     float y1,
                     float x2,
                     float y2,
                     float x3,
                     float y3)=0;
+
     virtual void fillSquare(float x,
                     float y,
-                    float rad,
-                    float rot=0.0f)=0;
+                    float side)=0;
+
     virtual void fillCircle(float x,
                     float y,
                     float rad,
@@ -68,12 +76,11 @@ public:
 
     void setFont(Font* font){mCurrentFont = font;}
 
-    virtual void drawText(float x, float y, string text)=0;
+    virtual void printText(float x, float y, string text)=0;
 
     virtual void _loadPNG(string filePath){};
 
 protected:
-
     Font* mCurrentFont;
 };
 
