@@ -10,6 +10,9 @@ public:
     Layer2D();
     virtual ~Layer2D();
 
+    virtual void setRotation(float x, float y, float angle)=0;
+    virtual void clearRotation()=0;
+
     virtual void drawPoint(float x, float y)=0;
     virtual void drawLine(float x1, float y1, float x2, float y2)=0;
     virtual void drawTriangle(float x1,
@@ -20,8 +23,7 @@ public:
                     float y3)=0;
     virtual void drawSquare(float x,
                     float y,
-                    float rad,
-                    float rot=0)=0;
+                    float side)=0;
     virtual void drawCircle(float x,
                     float y,
                     float rad,
@@ -35,8 +37,7 @@ public:
                     float y3)=0;
     virtual void fillSquare(float x,
                     float y,
-                    float rad,
-                    float rot=0)=0;
+                    float side)=0;
     virtual void fillCircle(float x,
                     float y,
                     float rad,
@@ -51,5 +52,5 @@ public:
 
     void setFont(Font* font);
 
-    virtual void drawText(float x, float y, std::string text)=0;
+    virtual void printText(float x, float y, std::string text)=0;
 };
