@@ -1,4 +1,14 @@
-pycasso (0.2)
+pycasso (0.3)
+
+  * Layer2D::drawText() changed to Layer2D::printText()
+  * Layer2D::setRotation() and Layer2D::clearRotation()
+  * Rotation parameter removed from drawSquare() and fillSquare()
+  * drawSquare() and fillSquare() now use side length instead of radius
+  * demo5 and demo6
+  * ...
+
+pycasso (0.2) alpha release
+24-Set-2007
 
   * Complete event system defined
   * SDL event system implemented
